# c2hsc

./: .gitignore  LICENSE  Main.hs  README.md  c2hsc.cabal  default.nix  stack.yaml
Data/: C2Hsc.hs
Data/C2Hsc/: BindingsDSL.hs  IvoryDSL.hs
Sample/: sample.h
app/: Main.hs
src/Data/: C2Hsc.hs
test/: Main.hs  main.hs  overrides.txt  smoke.h
