Name: c2hsc

Version:  0.3.3
Synopsis: Convert C API header files to .hsc and .hsc.helper.c files

Description: Convert C API header files to .hsc and .hsc.helper.c files

Homepage:           https://github.com/jwiegley/c2hsc
License:            BSD3
License-file:       LICENSE
Author:             John Wiegley
Maintainer:         John Wiegley <johnw@newartisans.com>
Category:           Utilities
Build-type:         Simple
Cabal-version:      >= 1.8

Extra-Source-Files: README.md

Executable c2hsc
  Main-is: Main.hs
  Ghc-options: -Wall

  Build-depends: base            >= 4   && < 5
               , mtl             >= 2.0
               , containers      >= 0.4
               , transformers    >= 0.2
               , directory       >= 1.1
               , language-c      >= 0.4
               , HStringTemplate >= 0.6
               , pretty          >= 1.1
               , filepath        >= 1.3
               , cmdargs         >= 0.9

--Test-suite smoke
--  Type: exitcode-stdio-1.0
--  Main-is: Smoke.hs
--  Hs-source-dirs: test
--  Build-depends: base >= 4 && < 5
--               , c2hsc

Source-repository head
  Type:     git
  Location: https://github.com/jwiegley/c2hsc

-- c2hsc.cabal ends here
