Name:          c2hsc
Version:       0.7.1
Synopsis:      Convert C API header files to .hsc and .hsc.helper.c files
Description:   Convert C API header files to .hsc and .hsc.helper.c files
Homepage:      https://github.com/jwiegley/c2hsc
License:       BSD3
License-file:  LICENSE
Author:        John Wiegley
Maintainer:    John Wiegley <johnw@newartisans.com>
Category:      Development
Build-type:    Simple
Cabal-version: >= 1.10

Extra-Source-Files: README.md

Library
    default-language:   Haskell2010
    ghc-options: -Wall
    build-depends:
        base            >= 3 && < 5
      , mtl             >= 2.0
      , containers      >= 0.4
      , transformers    >= 0.2
      , directory       >= 1.1
      , language-c      >= 0.4
      , logging         >= 1.3.0
      , HStringTemplate >= 0.7.1
      , pretty          >= 1.1
      , filepath        >= 1.3
      , split           >= 0.2
      , temporary       >= 1.1.2.5
      , data-default    >= 0.5.3
      , text            >= 0.11.3.1
    exposed-modules:
        Data.C2Hsc
    default-extensions: 
        BangPatterns
        FlexibleContexts
        OverloadedStrings

Executable c2hsc
    default-language:   Haskell2010
    main-is: Main.hs
    ghc-options: -Wall

    build-depends: 
        base            >= 4   && < 5
      , c2hsc
      , cmdargs         >= 0.9
      , HStringTemplate >= 0.7.1
      , pretty          >= 1.1
      , filepath        >= 1.3
      , directory       >= 1.1
      , language-c      >= 0.4
      , logging         >= 1.3.0
      , containers      >= 0.4
      , split           >= 0.2
      , transformers    >= 0.2
      , temporary       >= 1.1.2.5
      , data-default    >= 0.5.3
      , text            >= 0.11.3.1

Test-suite test
    default-language:   Haskell2010
    Type: exitcode-stdio-1.0
    Main-is: main.hs
    Hs-source-dirs: test
    Build-depends: 
        base         >= 4 && < 5
      , c2hsc
      , hspec        >= 1.8.3
      , here         >= 1.2.3
      , monad-logger >= 0.3.4.1
      , logging      >= 1.3.0
      , text         >= 0.11.3.1

Source-repository head
  Type:     git
  Location: https://github.com/jwiegley/c2hsc

-- c2hsc.cabal ends here
